--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- 绝对路径引入图标文件 -->
+    <link
+      data-n-head="ssr"
+      rel="icon"
+      type="image/x-icon"
+      href="/favicon.ico"
+    />
     <title>webpack5-react-ts</title>
   </head>
   <body>
