配置静态路由，静态菜单

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       type="image/x-icon"
       href="/favicon.ico"
     />
-    <title>webpack5-react-ts</title>
+    <title>react-admin | 后台管理系统</title>
   </head>
   <body>
     <!-- 容器节点 -->
