--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="🎉 A magical react antd admin">
+    <meta name="keywords" content="react,antd,admin,react-router-dom,mobx,redux,webpack,webpack5,dashboard,admin-dashboard,mock,i18n">
     <!-- 绝对路径引入图标文件 -->
     <link
       data-n-head="ssr"
